[gd_scene load_steps=18 format=3 uid="uid://diryunrxqcygg"]

[ext_resource type="Script" path="res://player/player.gd" id="1_22tkf"]
[ext_resource type="PackedScene" uid="uid://bj7faiptpc2ap" path="res://player/ui/hud/hud.tscn" id="2_aasqu"]
[ext_resource type="PackedScene" uid="uid://cnlrmqoo4kren" path="res://player/ui/hud/messages/message_handler.tscn" id="3_6aahp"]
[ext_resource type="PackedScene" uid="uid://b6esnbt2b5smi" path="res://items/equippables/common/auto_target/auto_target_sprite.tscn" id="5_8sgjl"]
[ext_resource type="Texture2D" uid="uid://6gcxcjt45u84" path="res://items/equippables/101/crosshair.webp" id="5_a2uri"]
[ext_resource type="PackedScene" uid="uid://df5ovt2ks4nt8" path="res://player/ui/pause_menu/front_screen/pause_menu.tscn" id="6_gflff"]
[ext_resource type="PackedScene" uid="uid://plh5aii2ck1t" path="res://player/ui/quick_select/quick_select.tscn" id="7_ntdeo"]
[ext_resource type="PackedScene" uid="uid://cwgjb2ijo7tsb" path="res://player/character/character.tscn" id="8_0u8ef"]
[ext_resource type="PackedScene" uid="uid://bb0hyexf3to16" path="res://player/ui/vendor_menu/vendor_menu.tscn" id="8_rggh7"]
[ext_resource type="Script" path="res://player/player_camera.gd" id="9_r6gip"]
[ext_resource type="Script" path="res://player/inventory.gd" id="10_jm8ho"]
[ext_resource type="Script" path="res://player/save_state.gd" id="11_87gof"]
[ext_resource type="AudioStream" uid="uid://dqde8dxkkyv6e" path="res://player/sfx/reload.wav" id="13_bwwio"]
[ext_resource type="Texture2D" uid="uid://brflltbbe3i36" path="res://player/drop_shadow.webp" id="14_0e12a"]
[ext_resource type="AudioStream" uid="uid://boarfogtgfjcr" path="res://player/sfx/male_hurt7.wav" id="14_qkb6n"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_e7qgu"]
height = 1.65
radius = 0.26

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0f8vl"]
height = 2.11267
radius = 1.79912

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 5
collision_mask = 5
floor_max_angle = 0.715585
script = ExtResource("1_22tkf")

[node name="HUD" type="Node3D" parent="."]

[node name="PlayerHUD" parent="HUD" instance=ExtResource("2_aasqu")]
metadata/_edit_use_anchors_ = true

[node name="MessageHandler" parent="HUD" instance=ExtResource("3_6aahp")]

[node name="CrosshairContainer" type="TextureRect" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_a2uri")
expand_mode = 1

[node name="AutoTargetSprite" parent="HUD" instance=ExtResource("5_8sgjl")]

[node name="GUI" type="Node3D" parent="."]

[node name="PauseMenu" parent="GUI" instance=ExtResource("6_gflff")]
visible = false

[node name="QuickSelect" parent="GUI" instance=ExtResource("7_ntdeo")]
visible = false

[node name="VendorMenu" parent="GUI" instance=ExtResource("8_rggh7")]
visible = false

[node name="Pivot" type="Node3D" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource("8_0u8ef")]

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.5, 0)
spring_length = 5.0
margin = 0.2
script = ExtResource("9_r6gip")

[node name="GameplayCamera" type="Camera3D" parent="SpringArm3D"]
v_offset = 0.5
fov = 80.0

[node name="Inventory" type="Node3D" parent="."]
script = ExtResource("10_jm8ho")

[node name="GroundAngleCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0553062, 0)
target_position = Vector3(0, -0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.82588, 0)
shape = SubResource("CylinderShape3D_e7qgu")

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="SecondJumpTimer" type="Timer" parent="."]
one_shot = true

[node name="StrafeTimer" type="Timer" parent="."]
one_shot = true

[node name="SaveState" type="Node3D" parent="."]
script = ExtResource("11_87gof")

[node name="SFX" type="Node3D" parent="."]

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("13_bwwio")

[node name="DamageSound" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("14_qkb6n")

[node name="DropShadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.95, 0)
size = Vector3(1, 16, 1)
texture_albedo = ExtResource("14_0e12a")
cull_mask = 1048573

[node name="MoneyArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MoneyArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.636379, 0)
shape = SubResource("CylinderShape3D_0f8vl")

[connection signal="on_pause_menu_closed" from="GUI/PauseMenu" to="." method="_on_pause_menu_closed"]
[connection signal="on_pause_menu_closed_item_selected" from="GUI/PauseMenu" to="Inventory" method="_on_pause_menu_closed_item_selected"]
[connection signal="on_quick_select_closed" from="GUI/QuickSelect" to="." method="_on_quick_select_closed"]
[connection signal="on_quick_select_closed" from="GUI/QuickSelect" to="Inventory" method="_on_quick_select_closed"]
[connection signal="on_vendor_menu_closed" from="GUI/VendorMenu" to="." method="_on_vendor_menu_closed"]
[connection signal="on_gun_equipped" from="Inventory" to="." method="_on_inventory_gun_equipped"]
[connection signal="on_melee_equipped" from="Inventory" to="." method="_on_inventory_melee_equipped"]
[connection signal="body_entered" from="MoneyArea3D" to="." method="_on_money_area_3d_body_entered"]
